fixes card width, footer height/visibility

--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -16,3 +16,27 @@
     font-size: 1rem;
   }
 }
+
+.cardContainer, .formContainer {
+  width: 100vw;
+  max-width: 100vw;
+  margin: 0;
+}
+
+.formContainer {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+@media (min-width: 601px) {
+  .cardContainer, .formContainer {
+    width: 45vw;
+    max-width: 45vw;
+    margin: 0 auto;
+  }
+
+  .formContainer {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
